@@ -43,8 +43,8 @@ public class MappedMultiFields extends FilterFields {
   @Override
   public Terms terms(String field) throws IOException {
     MultiTerms terms = (MultiTerms) in.terms(field);
-    if (terms == null) {
-      return null;
+    if (terms.isEmpty()) {
+      return Terms.EMPTY;
     } else {
       return new MappedMultiTerms(field, mergeState, terms);
     }
