@@ -104,7 +104,7 @@ public class AssertingLeafReader extends FilterLeafReader {
   @Override
   public Terms terms(String field) throws IOException {
     Terms terms = super.terms(field);
-    return terms == null ? null : new AssertingTerms(terms);
+    return (terms == null || terms == Terms.EMPTY) ? Terms.EMPTY : new AssertingTerms(terms);
   }
 
   @Override
